# portfolio-simulator-v2

./: README.md  pyproject.toml
data/input/: portfolios.csv  prices.csv
data/output/: portfolio_prices.csv
src/portfolio_simulator/: portfolio_simulator.py
test/: test_portfolio_simulator.py
